fix scrollbar color (image-collage-v3)

--- a/image-collage/v3/index.css
+++ b/image-collage/v3/index.css
@@ -139,6 +139,11 @@ a:focus-within {
 	width: 100%;
 	height: calc(100% - var(--menu-height, 17em));
 	overflow-y: scroll;
+	color-scheme: light;
+}
+
+.darked .collage {
+	color-scheme: dark;
 }
 
 :has(.menu.hidden) .collage {
